--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
-<html>>
-<head>
+<!DOCTYPE html>
+<html>
+  >
+  <head> </head>
 
-</head>
+  <body>
+    <h1>Our Home Page</h1>
 
-<body>
+    <p>Christian and Alex</p>
 
-<h1> Our Index Page</h1>
-
-<p>Alex & Christian</p>
-
-</body>
+    <p>This is the topmost paragraph</p>
+  </body>
 </html>
