--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 
 <p>Alex & Christian</p>
 
+<p>Make a change, raise it up to the repo, then make sure collaborators work is "pulled" down to your computer so everyone's on the same page.</p>
+
+
 </body>
 </html>
